--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
   "files.associations": {
+    "*.cxx": "cpp",
+    "*.fxx": "cpp",
+    "*.snippet": "cpp",
+    "*.ckk": "cpp",
+    "*.kk": "cmake",
     "limits": "cpp",
     "climits": "cpp",
     "iostream": "cpp",
@@ -10,12 +15,10 @@
     "vector": "cpp",
     "memory_resource": "cpp",
     "string_view": "cpp",
-
     "*.dxx": "cpp",
-    "*.fxx": "cpp",
     "*.hxx": "cpp",
     "*.txx": "cpp",
-    "*.cxx": "cpp",
     "*.uxx": "cpp",
+    "type_traits": "cpp"
   }
 }
