--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,33 +3,18 @@ cmake_minimum_required(VERSION 3.22.0 FATAL_ERROR)
 project(math
   LANGUAGES C CXX  )
 
-if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-    add_compile_options (-fdiagnostics-color=always)
-elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-    add_compile_options (-fcolor-diagnostics)
-endif ()
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(out
-  src/preprocessor.dxx
-  src/preprocessor.uxx
+# find_package(SDL2 CONFIG REQUIRED)
+# find_package(SDL2_image CONFIG REQUIRED)
+find_package(Eigen3 CONFIG REQUIRED)
 
-  src/tensor.dxx
-  src/tensor.fxx
-  src/tensor.hxx
-  src/tensor.txx
-  src/tensor.cxx
-  src/tensor.uxx
-
-  # src/vector.fxx
-  # src/vector.hxx
-  # src/vector.txx
-  # src/vector.cxx
-  src/main.cxx
-  )
-target_compile_options(out
-  PUBLIC -save-temps
-)
-
-target_include_directories(out
-  PUBLIC
-    ${CMAKE_SOURCE_DIR}/../boost/libs/preprocessor/include  )
+add_executable(cli src/main.cxx)
+target_link_libraries(cli
+  PRIVATE
+    Eigen3::Eigen  )
+    # SDL2::SDL2
+    # SDL2::SDL2main
+    # SDL2_image::SDL2_image  )
